--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,3 @@
 tasks:
 - init: >
-    cmake -S. -Bbuild -DCMAKE_EXPORT_COMPILE_COMMANDS=ON &&
-    cmake --build build --target all 
+    gcc --version
